[package]
name = "shuffler"
version = "0.1.5"
edition = "2021"
license = "GPL-3.0"
description = "Rust-based true spotify playlist shuffling"
repository = "https://github.com/ppege/shuffler"
readme = "README.md"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.23", features = ["derive"] }
console = "0.15.8"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
env_logger = "0.11.5"
futures = "0.3.31"
futures-util = "0.3.31"
indicatif = "0.17.9"
preferences = "2.0.0"
rand = "0.8.5"
rspotify = { version = "0.13.3", features = ["cli", "env-file"] }
tokio = { version = "1.41.1", features = ["full"] }
